# Estimation_Sim

./: .bashrc  README.md  Untitled Document  codegen_test.m  detect.m  estimateBB.m  plotter.m  setup.txt  train.m  untitled3.m  yolov2_detect.m
cvg_sim_gazebo/launch/: spawn_quadrotor.launch  test.launch
cvg_sim_gazebo/urdf/: quadrotor_base.urdf.xacro  quadrotor_sensors.urdf.xacro
cvg_sim_gazebo/worlds/: test.world
cvg_sim_gazebo_plugins/: CMakeLists.txt  package.xml
cvg_sim_gazebo_plugins/include/rotor/: rotor_plugin.h
cvg_sim_gazebo_plugins/msg/: MotorSpeed.msg
cvg_sim_gazebo_plugins/src/: diffdrive_plugin_6w.cpp  rotor_plugin.cpp
detection_network/: CMakeLists.txt  package.xml
detection_network/msg/: pixel.msg
detection_network/src/: junk.cpp  yolov2_detect.cpp  yolov2_detect.hpp
message_to_tf/: Project_solution.py
pelican_ctrl_pkg/: CMakeLists.txt  package.xml
pelican_ctrl_pkg/include/pelican_ctrl_pkg/: controllers.h  controllers_data_type.h  kalman_filters.h  pelican_data_types.h  pose_control.h  rotor_velocities.h  sensor_adq_fusion.h
pelican_ctrl_pkg/launch/: pelican_ctrl.launch
pelican_ctrl_pkg/msg/: azimut_elevation.msg  control_signals.msg  depth_estimates.msg  euler_values.msg  pose_estimation.msg  ref_values.msg
pelican_ctrl_pkg/src/: pelican_ctrl_node.cpp
pelican_ctrl_pkg/src/libraries/: controllers.cpp  kalman_filters.cpp  pose_control.cpp  rotor_velocities.cpp  sensor_adq_fusion.cpp
tgt_pstion/: CMakeLists.txt  package.xml
tgt_pstion/include/tgt_pstion/: target_position_estimation.h  tgt_kalman_filters.h
tgt_pstion/src/nodes/: tgt_pstion_single.cpp
trajectory_creator/: CMakeLists.txt  package.xml
trajectory_creator/include/trajectory_creator/: trajectory_pelican.h
trajectory_creator/src/: trajectory_pelican_single.cpp
